Fixed bug where Maven wouldn't run all tests at the same time :)